--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 beautifulsoup4==4.8.2
+bokeh==2.0.1
 boto3==1.12.31
 botocore==1.15.31
 bs4==0.0.1
@@ -6,10 +7,19 @@ certifi==2019.11.28
 chardet==3.0.4
 docutils==0.15.2
 idna==2.9
+Jinja2==2.11.1
 jmespath==0.9.5
+MarkupSafe==1.1.1
+numpy==1.18.2
+packaging==20.3
+Pillow==7.1.1
+pyparsing==2.4.6
 python-dateutil==2.8.1
+PyYAML==5.3.1
 requests==2.23.0
 s3transfer==0.3.3
 six==1.14.0
 soupsieve==2.0
+tornado==6.0.4
+typing-extensions==3.7.4.2
 urllib3==1.25.8
